--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "pinia": "^2.0.36",
+    "uuid": "^9.0.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
